@@ -8,12 +8,12 @@ CREATE TABLE tx_devlog (
 	crmsec bigint(11) unsigned DEFAULT '0' NOT NULL,
 	cruser_id int(11) unsigned DEFAULT '0' NOT NULL,
 	severity int(11) DEFAULT '0' NOT NULL,
-	extkey varchar(40) DEFAULT '' NOT NULL,
+	extkey varchar(100) DEFAULT '' NOT NULL,
 	msg text NOT NULL,
 	location varchar(255) DEFAULT '' NOT NULL,
 	line int(11) DEFAULT '0' NOT NULL,
 	data_var mediumtext NOT NULL,
-	
+
 	PRIMARY KEY (uid),
 	KEY parent (pid),
 	KEY crdate (crdate),
