@@ -1,3 +1,10 @@
+2013-05-28 Francois Suter <typo3@cobweb.ch>
+
+	* Fixed test of TYPO3_DB member variable
+	* Fixed clearing of search and filter
+	* Fixed filtering on namespaced keys
+	* Fixed display of page icons, resolves #48605
+
 2012-05-10 Francois Suter <typo3@cobweb.ch>
 
 	* Fixed one forgotten compatibility issue, resolves #36957
